add option to require approval for new instances
